# web_test_rs

./: .env  Cargo.toml
src/: main.rs
templates/: index.html  result.html
