[package]
name = "web_test"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-rt = "2"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql"] }
tera = "1"
serde = { version = "1", features = ["derive"] }
dotenvy = "0.15"
